--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+     "start": "node dist/src/server.js",
+     "dev": "nodemon dist/src/server.js",
+     "build": "tsc -p tsconfig.json",
+     "build:watch": "tsc -w -p tsconfig.json",
+     "dev:start": "nodemon dist/src/server.js",
+     "test": "echo \"Error: no test specified\" && exit 1"
+},
   "keywords": [],
   "author": "roshan",
   "license": "ISC",
